[package]
name    = "iata"
version = "0.6.0"
edition = "2018"
authors = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Mike Lubinets <lubinetsm@yandex.ru>",
    "Martin Mroz <martinmroz@gmail.com>",
]

license     = "MIT"
description = "Some implementations of IATA resolutions"
repository  = "https://github.com/anton-dutov/iata-rs"

[dependencies]
log    = "0.4"
chrono = "0.4"
