[package]
name    = "iata"
version = "0.8.0-alpha.2"
edition = "2021"
authors = [
    "Anton Dutov <anton.dutov@gmail.com>",
    "Mike Lubinets <lubinetsm@yandex.ru>",
    "Martin Mroz <martinmroz@gmail.com>",
]
readme      = "README.md"
license     = "MIT"
description = "Some implementations of IATA resolutions"
repository  = "https://github.com/anton-dutov/iata-rs"
categories  = ["parser-implementations"]
keywords    = ["iata", "bcbp"]

[dependencies]
log       = "0.4"
thiserror = "1.0"
chrono    = "0.4"
